--- a/week1_homework/pt4.css
+++ b/week1_homework/pt4.css
@@ -4,6 +4,11 @@ body{
     background-image: url(/week1_homework/materials/star\ 2.gif);
 }
 
+@font-face {
+    font-family: "w95fa";
+    src: url(/week1_homework/materials/w95fa.woff) format("woff");
+}
+
 .mobile{
     position: absolute;
     top: 17%;
