--- a/style.css
+++ b/style.css
@@ -169,3 +169,19 @@ div{
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
+a:visited{
+    color:white;
+    text-decoration: none;
+}
+
+a:active{
+    color:white;
+    background-color: rgb(116, 116, 116);
+    text-decoration: none;
+}
