--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@ p{
 }
 
 .star{ 
-    font-family: 'Mediga', sans-serif;
-    font-size: 50px;
-
+    font-family: 'Times New Roman', Times, serif, sans-serif;
 }
 
 .stargif{
@@ -73,8 +71,8 @@ div{
 }
 
 .sun{
-    font-family: 'Mediga', sans-serif;
-    font-size: 50px;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
+                                                
 }
 
 
