Revised table of contents 3

--- a/week3_homework_studio/table3.css
+++ b/week3_homework_studio/table3.css
@@ -344,8 +344,8 @@ body{
     font-family: 'Satoshi', sans-serif;
     font-style: italic;
     font-size: 18px;
-    margin-top: -410px;
-    margin-left: 790px;
+    margin-top: -550px;
+    margin-left: 770px;
     line-height: 45px;
     text-align: center;
     border: 4px solid black;
@@ -358,19 +358,121 @@ body{
 #cha9{
     font-size: 40px;
     position: absolute;
-    left:830px;
-    top:300px;
+    left:810px;
+    top:160px;
 }
 
 #page9{
     font-size: 40px;
     position: absolute;
-    left:1020px;
-    top:300px;
+    left:1000px;
+    top:160px;
 }
 
 
 #deb9{
+    font-size: 14px;
+}
+
+.chapter10{
+    font-family: 'Satoshi', sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    margin-top: 40px;
+    margin-left: 800px;
+    line-height: 45px;
+    text-align: center;
+    border: 4px solid black;
+    width: 320px;
+    height: 90px;
+    border-radius: 80px;
+
+}
+
+#cha10{
+    font-size: 40px;
+    position: absolute;
+    left:830px;
+    top:295px;
+}
+
+#page10{
+    font-size: 40px;
+    position: absolute;
+    left:1030px;
+    top:295px;
+}
+
+
+#deb10{
+    font-size: 14px;
+}
+
+.chapter11{
+    font-family: 'Satoshi', sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    margin-top: 40px;
+    margin-left: 750px;
+    line-height: 45px;
+    text-align: center;
+    border: 4px solid black;
+    width: 340px;
+    height: 90px;
+    border-radius: 80px;
+
+}
+
+#cha11{
+    font-size: 40px;
+    position: absolute;
+    left:785px;
+    top:430px;
+}
+
+#page11{
+    font-size: 40px;
+    position: absolute;
+    left:1000px;
+    top:430px;
+}
+
+
+#deb11{
+    font-size: 14px;
+}
+
+.chapter12{
+    font-family: 'Satoshi', sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    margin-top: 40px;
+    margin-left: 780px;
+    line-height: 45px;
+    text-align: center;
+    border: 4px solid black;
+    width: 340px;
+    height: 90px;
+    border-radius: 80px;
+
+}
+
+#cha12{
+    font-size: 40px;
+    position: absolute;
+    left:820px;
+    top:575px;
+}
+
+#page12{
+    font-size: 40px;
+    position: absolute;
+    left:1020px;
+    top:575px;
+}
+
+
+#deb12{
     font-size: 14px;
 }
 
@@ -419,3 +521,19 @@ body{
     background-color: black;
     color: rgb(255, 96, 96);
 }
+
+.chapter10:hover{
+    background-color: black;
+    color: rgb(255, 96, 96);
+}
+
+.chapter11:hover{
+    background-color: black;
+    color: rgb(255, 96, 96);
+}
+
+.chapter12:hover{
+    background-color: black;
+    color: rgb(255, 96, 96);
+}
+
