--- a/week5_homework_lab/style.css
+++ b/week5_homework_lab/style.css
@@ -611,6 +611,9 @@ main{
     font-weight: 400;
     color: rgb(107, 107, 107);
     margin-top: 2vh;
+    font-family: 'Shippori Mincho', sans-serif;
+    font-weight: 400;
+
 }
 
 #art2{
