Started styling list/grid

--- a/week11_homework_lab/style.css
+++ b/week11_homework_lab/style.css
@@ -4,16 +4,35 @@
     --width:5vw;
  }
 
- body{
-    margin: 0;
-    padding: 0;
- }
 
 
 @media only screen and (min-width: 600px){
+    body{
+        margin: 0;
+        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 150px min-content 1fr min-content;
+        min-height: 100vh;
+    }
+
     header{
         padding: var(--spacing);
         background-color: coral;
+    }
+
+    ul{
+        list-style-type: none;
+    }
+
+    #poster-list{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #poster-list li{
+        background-color: lightsalmon;
+        
     }
 
     aside{
