--- a/project3/assets/style.css
+++ b/project3/assets/style.css
@@ -9,16 +9,76 @@ body{
 }
 
 h1{
-    font-family: "brevier", sans-serif;
-    font-size: calc(3 *var(--font-size));
-    font-weight: 700;
+    font-family: 'PF Tempesta Five Extended', sans-serif;
+    font-size: calc(2 *var(--font-size));
+    font-weight: 400;
     font-style: normal;
     border:rgb(0, 255, 115) 3px solid;
-    width: calc(7 * var(--width));
+    width: calc(9 * var(--width));
     text-align: center;
     color:rgb(0, 255, 115);
+    margin-top: var(--spacing);
+    margin-left: auto;
+    margin-right: auto;
 
 }
+
+marquee{
+    padding: 0;
+    margin: auto;
+    width: calc(8.5 * var(--width));
+}
+
+/* #introduction{
+    font-family: 'IBM Plex Sans KR', sans-serif;
+    font-weight: 500;
+    font-size: 1vw;
+    line-height: 3.5em;
+    width: calc(9 * var(--width));
+    margin-top: var(--spacing);
+    margin-left: var(--spacing);
+    color:rgb(148, 148, 148);
+                                                
+} */
+
+#provider{
+    font-family: 'PF Tempesta Five Compressed', sans-serif;
+    font-size: var(--font-size);
+    font-weight: 400;
+    font-style: normal;
+    color:rgb(165, 165, 165);
+    margin-top: var(--spacing);
+    margin-left: var(--spacing);
+}
+
+#provider::before{
+    content: "• ";
+    color:rgb(0, 255, 115);
+}
+
+#typewriter1 {
+    display: inline-flex;
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation:
+      typing 3.5s steps(30, end),
+      blink-caret .75s step-end infinite;
+  }
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 20%}
+  }
+  
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange }
+  }
+
 
 ul{
     list-style-type: none;
@@ -28,21 +88,25 @@ ul{
 #providerGraph{
     --total--provider: calc(var(--alt) + var(--spec) + var(--att) + var(--partner) + var(--fiber));
     display: flex;
-    margin-top: calc(2 * var(--spacing));
-    background-color: rgb(59, 59, 59);
-    border-radius: calc(var(--spacing) / 4);
+    width: calc(9 * var(--width));
+    margin-top: calc(0.5 * var(--spacing));
+    border: 3px solid rgb(0, 255, 115);
     height: calc(2 * var(--spacing));
     font-family: "brevier", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: var(--font-size);
     color: white;
-    box-shadow: 0px 0px 20px 0px rgba(0,255,115,0.3);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5vw;
     overflow: hidden;
 }
 
 #providerGraph li{
     padding: calc(var(--spacing) / 2);
+    height: calc(var(--width) / 4);
+    margin: auto;
     align-items:center;
     text-align: center;
 }
@@ -71,3 +135,56 @@ ul{
     background-color: rgb(79, 79, 79);
     width:calc(var(--fiber) / var(--total--provider) * 100%);
 }
+
+.providerName{
+    display: none;
+    font-family: 'PF Tempesta Five Compressed', sans-serif;
+    font-size: var(--font-size);
+    font-weight: 400;
+    font-style: normal;
+    color: rgb(0, 255, 115);
+    border-left: 3px solid rgb(0, 255, 115);
+    margin-top: auto;
+
+}
+
+li:hover .providerName{
+    display: block;
+}
+
+#attname{
+    margin-left: calc(-2 * var(--spacing));
+}
+
+#ptnname{
+    margin-left: calc(-3 * var(--spacing));
+}
+
+#fibname{
+    margin-left: calc(-3 * var(--spacing));
+}
+
+
+#scanner{
+    position: absolute;
+    width: 2px;  
+    height: calc(2 * var(--spacing));
+    background-color: rgb(0, 255, 115);
+    margin-top: calc(-2 * var(--spacing));
+    margin-left: var(--spacing);
+    z-index: auto;
+    animation: move 5s ease-in-out;
+    animation-iteration-count: infinite;
+    animation-fill-mode: inherit;
+}
+
+@keyframes move{
+    0%{margin-left:var(--spacing);}
+    50%{margin-left: calc(18.9 * var(--spacing));}
+    100%{margin-left:var(--spacing);}
+}
+
+#Layer_2{
+    width: calc(4 * var(--spacing));
+}
+
