--- a/project3/assets/style.css
+++ b/project3/assets/style.css
@@ -95,7 +95,6 @@ span:nth-child(2){
 
 span:nth-child(3){
     border-right:2px dashed rgb(0, 122, 55);
-    border-left:px dashed rgb(0, 122, 55);
 }
 
 #provider{
@@ -230,15 +229,15 @@ li:hover .providerName{
     margin-top: calc(-2 * var(--spacing));
     margin-left: var(--spacing);
     z-index: auto;
-    animation: move 5s ease-in-out;
+    animation: move 3s ease-in-out;
     animation-iteration-count: infinite;
     animation-fill-mode: inherit;
 }
 
 @keyframes move{
-    0%{margin-left:var(--spacing);}
-    50%{margin-left: calc(18.9 * var(--spacing));}
-    100%{margin-left:var(--spacing);}
+    0%{margin-left:calc(1.5 * var(--spacing));}
+    50%{margin-left: calc(19.3 * var(--spacing));}
+    100%{margin-left:calc(1.5 * var(--spacing));}
 }
 
 #Layer_2{
@@ -512,12 +511,12 @@ li:hover .providerName{
 }
 
 #spot6{
-    animation: move 2s ease-in-out infinite alternate;
+    animation: circmove 2s ease-in-out infinite alternate;
 }
 
-@keyframes move{
+@keyframes circmove{
     0% {
-      transform: translateX(0);
+      transform: translateX(30px);
     }
     20% {
       transform: translateX(100px);
@@ -532,7 +531,7 @@ li:hover .providerName{
     transform: translateX(50px);
     }
     100% {
-      transform: translateX(0);
+      transform: translateX(30px);
     }
   }
 
@@ -598,6 +597,473 @@ animation: move3 1s ease-in-out infinite alternate;
     }
 
 
+#borough{
+    font-family: 'PF Tempesta Five', sans-serif;
+    font-size: calc(2 * var(--font-size));
+    font-weight: 400;
+    font-style: normal;
+    color:rgb(0, 255, 115);
+    margin-top: calc(-3 * var(--spacing));
+    margin-left: var(--spacing);
+}
+
+#borough::before{
+    content: "• ";
+    color:rgb(0, 255, 115);
+}
+
+
+#wifiarea{
+    margin-top: calc(-1 * var(--spacing));
+    transition: fill 0.5s ease-in-out;
+    animation-iteration-count:infinite;
+    fill: #365B40;
+}
+
+.areaAnimation {
+    animation: change-color 2s linear infinite;
+  }
+  
+  @keyframes change-color {
+    0% {
+      fill: #365B40;
+    }
+    50% {
+      fill: #3d814f;
+    }
+    100% {
+      fill: #00ff73;
+    }
+  }
+  
+  .areaAnimation:nth-child(4) {
+    animation-delay: 0s;
+  }
+  .areaAnimation:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+  .areaAnimation:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  .areaAnimation:nth-child(1) {
+    animation-delay: 0.6s;
+  }
+  .areaAnimation:nth-child(5) {
+    animation-delay: 0.8s;
+  }
 
 
 
+#areaText{
+    font-family: 'PF Tempesta Five Compressed', sans-serif;
+    font-weight: 400;
+    font-size: calc(0.5 * var(--font-size));
+    line-height: 3.5em;
+    color:rgb(148, 148, 148);
+}
+
+#stext{
+    margin-top: calc(-4 * var(--spacing));
+    margin-left: calc(5 * var(--spacing)); 
+    width: calc(3 * var(--width));
+    padding: 2px;
+    border: 2px dashed rgb(0, 255, 115);
+}
+
+
+#bxtext{
+    margin-top: calc(-5 * var(--spacing));
+    margin-left: calc(14 * var(--spacing)); 
+    width: calc(2 * var(--width));
+    padding: 2px;
+    border: 2px dashed rgb(0, 255, 115);
+}
+
+#mtext{
+    margin-top: calc(-6 * var(--spacing));
+    margin-left: calc(1 * var(--spacing)); 
+    width: calc(2 * var(--width));
+    padding: 2px;
+    border: 2px dashed rgb(0, 255, 115);
+}
+
+#qtext{
+    margin-top: calc(-6 * var(--spacing));
+    margin-left: calc(17 * var(--spacing)); 
+    width: calc(2 * var(--width));
+    padding: 2px;
+    border: 2px dashed rgb(0, 255, 115);
+}
+
+#bktext{
+    margin-top: calc(-11 * var(--spacing));
+    margin-left: calc(2 * var(--spacing)); 
+    width: calc(3 * var(--width));
+    padding: 2px;
+    border: 2px dashed rgb(0, 255, 115);
+}
+
+
+@media (min-width: 600px){
+    :root{
+        --spacing: 5vw; 
+        --font-size: 2.5vw;
+        --width:10vw;
+    }
+
+    h1{
+        border: #00ff73 solid 5px;
+    }
+
+    #introduction{
+        font-size: calc(1 * var(--font-size));
+        line-height: 1.5em;
+                                                    
+    }
+    .collapsible{
+        width: 30px;
+        margin-left: calc(1.5 * var(--spacing));
+    }
+    
+    
+    #collectedData{
+        font-size: calc(1 * var(--font-size));
+        line-height: 1.5em;
+        border: 3px dashed rgb(0, 255, 115);
+                                                    
+    }
+    
+    
+    span:nth-child(2){
+        border-right:3px dashed rgb(0, 122, 55);
+        border-left:3px dashed rgb(0, 122, 55);
+        padding-left: 7px;
+    }
+    
+    span:nth-child(3){
+        border-right:3px dashed rgb(0, 122, 55);
+    }
+
+    #providerGraph{
+        border: 5px solid rgb(0, 255, 115);
+    }
+
+    #scanner{
+        width: 5px;  
+    }
+
+    .providerName{
+        font-size: calc(1.5 * var(--font-size));
+    
+    }
+
+    #Layer_2{
+        margin-left: calc(1.5 * var(--spacing));
+    }
+    
+    #loading-bar{
+        transform: scale(2);
+        display: flex;
+        margin-top: calc(-8.5 * var(--spacing));
+        margin-left: calc(4 * var(--spacing));
+    }
+    
+    .volume{
+        margin-top: calc(-6.3 * var(--spacing));
+        margin-left: calc(3.5 * var(--spacing));
+        animation: volume-change 1s linear .5s infinite;
+        transform-origin:top;
+    }
+    
+    @keyframes volume-change{
+        0%
+          {transform: scaleY(2)}
+        25%
+          {transform: scaleY(1.5)}
+        50%
+          {transform: scaleY(1.7)}
+        75%
+          {transform: scaleY(1.3)}
+      }
+    
+    #circleMap{
+        width: calc(15 * var(--spacing));
+        margin-top: calc(-13.5 * var(--spacing));
+        margin-left: calc(5.5 * var(--spacing));
+    
+    }
+    
+    .mapSpots{
+        display: flex;
+        transform: scale(2);
+        margin-top: calc(-9.5 * var(--spacing));
+        margin-left: calc(11.5 * var(--spacing));
+    }
+    
+    #ssid{
+        margin-top: calc(1 * var(--spacing));
+    }
+
+    #ssidText{
+        font-size: calc(0.5 * var(--spacing));
+        line-height: 1.5em;
+        border-top: 3px solid rgb(0, 255, 115);
+        border-bottom: 3px solid rgb(0, 255, 115);
+        padding-top: 3px;
+        padding-bottom: 3px;
+    }
+
+    #networkSpot{
+        transform: scale(2);
+        margin-top: calc(-11 * var(--spacing)); 
+        margin-left: calc(9.5 * var(--spacing)); 
+    }
+
+    #areaText{
+        font-size: calc(1 * var(--font-size));
+        line-height: 1.5em;
+    }
+    
+    #stext{
+        margin-top: calc(-4 * var(--spacing));
+        margin-left: calc(4 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 2px dashed rgb(0, 255, 115);
+    }
+    
+    
+    #bxtext{
+        margin-top: calc(-5 * var(--spacing));
+        margin-left: calc(13 * var(--spacing)); 
+        width: calc(2 * var(--width));
+        padding: 2px;
+        border: 2px dashed rgb(0, 255, 115);
+    }
+    
+    #mtext{
+        margin-top: calc(-6 * var(--spacing));
+        margin-left: calc(1 * var(--spacing)); 
+        width: calc(2 * var(--width));
+        padding: 2px;
+        border: 2px dashed rgb(0, 255, 115);
+    }
+    
+    #qtext{
+        margin-top: calc(-5 * var(--spacing));
+        margin-left: calc(17 * var(--spacing)); 
+        width: calc(2 * var(--width));
+        padding: 2px;
+        border: 2px dashed rgb(0, 255, 115);
+    }
+    
+    #bktext{
+        margin-top: calc(-10.5 * var(--spacing));
+        margin-left: calc(2 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 2px dashed rgb(0, 255, 115);
+    }
+}
+
+@media (min-width: 1200px){
+    :root{
+        --spacing: 2vw; 
+        --font-size: 1vw;
+        --width:5vw;
+    }
+
+    body{
+        justify-content: center;
+        grid-template-rows: repeat(8, min-content);
+        min-height: 100vh;
+    }
+
+    h1{
+        border: #00ff73 solid 10px;
+    }
+
+    #introduction{
+        font-size: calc(1.5 * var(--font-size));
+        line-height: 1em;
+                                                    
+    }
+    .collapsible{
+        font-size:calc(0.8 * var(--spacing));
+        width: 55px;
+        margin-left: calc(1.5 * var(--spacing));
+        box-shadow: inset 5px 5px rgb(122, 135, 128);
+    }
+    
+    
+    #collectedData{
+        font-size: calc(1.5 * var(--font-size));
+        line-height: 1em;
+        border: 5px dashed rgb(0, 255, 115);
+                                                    
+    }
+    
+    
+    span:nth-child(2){
+        border-right:5px dashed rgb(0, 122, 55);
+        border-left:5px dashed rgb(0, 122, 55);
+        padding-left: 7px;
+    }
+    
+    span:nth-child(3){
+        border-right:5px dashed rgb(0, 122, 55);
+    }
+
+    #providerGraph{
+        border: 10px solid rgb(0, 255, 115);
+        
+    }
+
+    #scanner{
+        width: 10px;  
+    }
+
+    @keyframes move{
+        0%{margin-left:calc(1.5* var(--spacing));}
+        50%{margin-left: calc(23.8 * var(--spacing));}
+        100%{margin-left:calc(1.5 * var(--spacing));}
+    }
+
+    .providerName{
+        display: none;
+        font-family: 'PF Tempesta Five Compressed', sans-serif;
+        font-size: calc(1.5 * var(--font-size));
+        font-weight: 400;
+        font-style: normal;
+        color: rgb(0, 255, 115);
+        border-left: 10px solid rgb(0, 255, 115);
+        margin-top: auto;
+    
+    }
+    
+    #providerGraph li{
+        margin-top: calc(-0.4 * var(--spacing));
+    }
+
+
+    #Layer_2{
+        width: calc(8 * var(--spacing));
+        margin-left: calc(1.5 * var(--spacing));
+    }
+    
+    #loading-bar{
+        transform: scale(3.5);
+        display: flex;
+        margin-top: calc(-11 * var(--spacing));
+        margin-left: calc(5.2 * var(--spacing));
+    }
+    
+    .volume{
+        margin-top: calc(-6.3 * var(--spacing));
+        margin-left: calc(3.5 * var(--spacing));
+        animation: volume-change 1s linear .5s infinite;
+        transform-origin:top;
+        display: none;
+    }
+    
+    @keyframes volume-change{
+        0%
+          {transform: scaleY(2)}
+        25%
+          {transform: scaleY(1.5)}
+        50%
+          {transform: scaleY(1.7)}
+        75%
+          {transform: scaleY(1.3)}
+      }
+    
+    #circleMap{
+        width: calc(18 * var(--spacing));
+        margin-top: calc(-17 * var(--spacing));
+        margin-left: calc(8 * var(--spacing));
+    
+    }
+    
+    .mapSpots{
+        display: flex;
+        transform: scale(3);
+        margin-top: calc(-10 * var(--spacing));
+        margin-left: calc(16 * var(--spacing));
+    }
+    
+    #ssid{
+        margin-top: calc(1 * var(--spacing));
+    }
+
+    #ssidText{
+        font-size: calc(1 * var(--spacing));
+        line-height: 1em;
+        border-top: 5px solid rgb(0, 255, 115);
+        border-bottom: 5px solid rgb(0, 255, 115);
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .buttons{
+        font-family: 'PF Tempesta Five Compressed', sans-serif;
+        font-weight: 400;
+        font-size:calc(0.8 * var(--spacing));
+        width: calc(8 * var(--width));
+        color:rgb(82, 134, 93);
+        margin-top: calc(0.5 * var(--spacing));
+        margin-left: var(--spacing);
+    }
+
+    #networkSpot{
+        transform: scale(3);
+        margin-top: calc(-10.5 * var(--spacing)); 
+        margin-left: calc(11 * var(--spacing)); 
+    }
+
+    #areaText{
+        font-size: calc(1.8 * var(--font-size));
+        line-height: 1em;
+    }
+    
+    #stext{
+        margin-top: calc(-5 * var(--spacing));
+        margin-left: calc(6 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 5px dashed rgb(0, 255, 115);
+    }
+    
+    
+    #bxtext{
+        margin-top: calc(-8 * var(--spacing));
+        margin-left: calc(18 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 5px dashed rgb(0, 255, 115);
+    }
+    
+    #mtext{
+        margin-top: calc(-3.5 * var(--spacing));
+        margin-left: calc(0 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 5px dashed rgb(0, 255, 115);
+    }
+    
+    #qtext{
+        margin-top: calc(-8 * var(--spacing));
+        margin-left: calc(-5 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 5px dashed rgb(0, 255, 115);
+    }
+    
+    #bktext{
+        margin-top: calc(-11.5 * var(--spacing));
+        margin-left: calc(2 * var(--spacing)); 
+        width: calc(3 * var(--width));
+        padding: 2px;
+        border: 5px dashed rgb(0, 255, 115);
+    }
+
+}
